{
  "version": 4,
  "terraform_version": "1.1.8",
  "serial": 437,
  "lineage": "3ac4b7d0-f983-032b-bc41-272362556ed7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1a",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-056f63df85ac30592",
            "association_id": "eipassoc-092523257cd537c8a",
            "domain": "vpc",
            "id": "eipalloc-056f63df85ac30592",
            "instance": "i-0810d99387ca0a98c",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0dbd2c1921999e078",
            "private_dns": "ip-10-0-10-162.ap-northeast-1.compute.internal",
            "private_ip": "10.0.10.162",
            "public_dns": "ec2-54-64-23-146.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.64.23.146",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_key_pair.key",
            "aws_security_group.common",
            "aws_security_group.ec2",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-1c",
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-03e88f08456f8226a",
            "association_id": "eipassoc-0c72a026895fb8bed",
            "domain": "vpc",
            "id": "eipalloc-03e88f08456f8226a",
            "instance": "i-074f47e057337015f",
            "network_border_group": "ap-northeast-1",
            "network_interface": "eni-0004db88ae4f5a742",
            "private_dns": "ip-10-0-30-21.ap-northeast-1.compute.internal",
            "private_ip": "10.0.30.21",
            "public_dns": "ec2-54-238-112-3.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.112.3",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_key_pair.key",
            "aws_security_group.common",
            "aws_security_group.ec2",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1a",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bba69335379e17f8",
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:instance/i-0810d99387ca0a98c",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0810d99387ca0a98c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "example",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0dbd2c1921999e078",
            "private_dns": "ip-10-0-10-162.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.10.162",
            "public_dns": "ec2-54-64-23-146.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.64.23.146",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-0c862fcaa4345a5b5",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0ff4ef4c1eed0c20e",
            "tags": {
              "Name": "example-stg-web01"
            },
            "tags_all": {
              "Name": "example-stg-web01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c5d8ab78006231d",
              "sg-0e10a5156c5cd8d3a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.common",
            "aws_security_group.ec2",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-1c",
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0bba69335379e17f8",
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:instance/i-074f47e057337015f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-1c",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-074f47e057337015f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "key_name": "example",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0004db88ae4f5a742",
            "private_dns": "ip-10-0-30-21.ap-northeast-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.30.21",
            "public_dns": "ec2-54-238-112-3.ap-northeast-1.compute.amazonaws.com",
            "public_ip": "54.238.112.3",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 300,
                "throughput": 0,
                "volume_id": "vol-03389f53ef6f50506",
                "volume_size": 100,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-071a43efdffa907d3",
            "tags": {
              "Name": "example-stg-web01"
            },
            "tags_all": {
              "Name": "example-stg-web01"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-09c5d8ab78006231d",
              "sg-0e10a5156c5cd8d3a"
            ]
          },
          "dependencies": [
            "aws_key_pair.key",
            "aws_security_group.common",
            "aws_security_group.ec2",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:internet-gateway/igw-03bc6a183c7e1f64a",
            "id": "igw-03bc6a183c7e1f64a",
            "owner_id": "482122962623",
            "tags": {
              "Name": "example-stg-igw"
            },
            "tags_all": {
              "Name": "example-stg-igw"
            },
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:loadbalancer/app/example-stg-alb/fd36c3757cee886d",
            "arn_suffix": "app/example-stg-alb/fd36c3757cee886d",
            "desync_mitigation_mode": "defensive",
            "dns_name": "example-stg-alb-1012798057.ap-northeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:loadbalancer/app/example-stg-alb/fd36c3757cee886d",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "example-stg-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d9a124d6a08ec427"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-071a43efdffa907d3"
              },
              {
                "subnet_id": "subnet-0ff4ef4c1eed0c20e"
              }
            ],
            "subnets": [
              "subnet-071a43efdffa907d3",
              "subnet-0ff4ef4c1eed0c20e"
            ],
            "tags": {
              "Name": "example-stg-alb"
            },
            "tags_all": {
              "Name": "example-stg-alb"
            },
            "vpc_id": "vpc-0eb67008c273b6b50",
            "zone_id": "Z14GRHDCWA56QT"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb-listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:listener/app/example-stg-alb/fd36c3757cee886d/a060ec4d6b40f3e2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:targetgroup/example-stg-tg/b2f76ab1350291eb",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:listener/app/example-stg-alb/fd36c3757cee886d/a060ec4d6b40f3e2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:loadbalancer/app/example-stg-alb/fd36c3757cee886d",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.alb",
            "aws_lb_target_group.tg",
            "aws_security_group.alb",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:targetgroup/example-stg-tg/b2f76ab1350291eb",
            "arn_suffix": "targetgroup/example-stg-tg/b2f76ab1350291eb",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:targetgroup/example-stg-tg/b2f76ab1350291eb",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "example-stg-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "example-stg-tg"
            },
            "tags_all": {
              "Name": "example-stg-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "tg-to-ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1a",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:targetgroup/example-stg-tg/b2f76ab1350291eb-20221222162733638200000007",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:targetgroup/example-stg-tg/b2f76ab1350291eb",
            "target_id": "i-0810d99387ca0a98c"
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_key_pair.key",
            "aws_lb_target_group.tg",
            "aws_security_group.common",
            "aws_security_group.ec2",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-1c",
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:targetgroup/example-stg-tg/b2f76ab1350291eb-20221222162733737700000008",
            "target_group_arn": "arn:aws:elasticloadbalancing:ap-northeast-1:482122962623:targetgroup/example-stg-tg/b2f76ab1350291eb",
            "target_id": "i-074f47e057337015f"
          },
          "dependencies": [
            "aws_instance.ec2-instance",
            "aws_key_pair.key",
            "aws_lb_target_group.tg",
            "aws_security_group.common",
            "aws_security_group.ec2",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "public-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1a",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03bc6a183c7e1f64a",
            "id": "r-rtb-04569f9298bfee06c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04569f9298bfee06c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-tables",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-1c",
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-03bc6a183c7e1f64a",
            "id": "r-rtb-08c5a7cbca4e235ec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08c5a7cbca4e235ec",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gateway",
            "aws_route_table.public-route-tables",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private-route-tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:route-table/rtb-076f23af61751f622",
            "id": "rtb-076f23af61751f622",
            "owner_id": "482122962623",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-stg-private-rtb"
            },
            "tags_all": {
              "Name": "example-stg-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:route-table/rtb-0e835935149086979",
            "id": "rtb-0e835935149086979",
            "owner_id": "482122962623",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "example-stg-private-rtb"
            },
            "tags_all": {
              "Name": "example-stg-private-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1a",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:route-table/rtb-04569f9298bfee06c",
            "id": "rtb-04569f9298bfee06c",
            "owner_id": "482122962623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bc6a183c7e1f64a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-stg-public-rtb"
            },
            "tags_all": {
              "Name": "example-stg-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-1c",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:route-table/rtb-08c5a7cbca4e235ec",
            "id": "rtb-08c5a7cbca4e235ec",
            "owner_id": "482122962623",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-03bc6a183c7e1f64a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "example-stg-public-rtb"
            },
            "tags_all": {
              "Name": "example-stg-public-rtb"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private-route-tables-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03820f25ad56d9f2e",
            "route_table_id": "rtb-076f23af61751f622",
            "subnet_id": "subnet-0578a25850b730980"
          },
          "dependencies": [
            "aws_route_table.private-route-tables",
            "aws_subnet.private-subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c690928e3f6052ee",
            "route_table_id": "rtb-0e835935149086979",
            "subnet_id": "subnet-0e040f0f0b42fab04"
          },
          "dependencies": [
            "aws_route_table.private-route-tables",
            "aws_subnet.private-subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public-route-tables-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1a",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c9d5d54586de692f",
            "route_table_id": "rtb-04569f9298bfee06c",
            "subnet_id": "subnet-0ff4ef4c1eed0c20e"
          },
          "dependencies": [
            "aws_route_table.public-route-tables",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-1c",
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f2f03f9b6bbffcb7",
            "route_table_id": "rtb-08c5a7cbca4e235ec",
            "subnet_id": "subnet-071a43efdffa907d3"
          },
          "dependencies": [
            "aws_route_table.public-route-tables",
            "aws_subnet.public-subnets",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:security-group/sg-0d9a124d6a08ec427",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d9a124d6a08ec427",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20221222162718309800000004",
            "name_prefix": "terraform-",
            "owner_id": "482122962623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-stg-alb-sg"
            },
            "tags_all": {
              "Name": "example-stg-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "common",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:security-group/sg-09c5d8ab78006231d",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-09c5d8ab78006231d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221222162718207700000001",
            "name_prefix": "terraform-",
            "owner_id": "482122962623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-stg-common-sg"
            },
            "tags_all": {
              "Name": "example-stg-common-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:security-group/sg-0e10a5156c5cd8d3a",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0e10a5156c5cd8d3a",
            "ingress": [
              {
                "cidr_blocks": [
                  "119.229.192.95/32"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "terraform-20221222162718247900000003",
            "name_prefix": "terraform-",
            "owner_id": "482122962623",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "example-stg-ec2-sg"
            },
            "tags_all": {
              "Name": "example-stg-ec2-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:security-group/sg-013f1887a7af1746c",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-013f1887a7af1746c",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform-20221222162718245500000002",
            "name_prefix": "terraform-",
            "owner_id": "482122962623",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "private-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:subnet/subnet-0578a25850b730980",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0578a25850b730980",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482122962623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-stg-private-1a"
            },
            "tags_all": {
              "Name": "example-stg-private-1a"
            },
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "private-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:subnet/subnet-0e040f0f0b42fab04",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.40.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e040f0f0b42fab04",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482122962623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-stg-private-1c"
            },
            "tags_all": {
              "Name": "example-stg-private-1c"
            },
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "public-1a",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:subnet/subnet-0ff4ef4c1eed0c20e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1a",
            "availability_zone_id": "apne1-az4",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ff4ef4c1eed0c20e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482122962623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-stg-public-1a"
            },
            "tags_all": {
              "Name": "example-stg-public-1a"
            },
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        },
        {
          "index_key": "public-1c",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:subnet/subnet-071a43efdffa907d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-1c",
            "availability_zone_id": "apne1-az1",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-071a43efdffa907d3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "482122962623",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "example-stg-public-1c"
            },
            "tags_all": {
              "Name": "example-stg-public-1c"
            },
            "vpc_id": "vpc-0eb67008c273b6b50"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-1:482122962623:vpc/vpc-0eb67008c273b6b50",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0c4a9ef25d883f370",
            "default_route_table_id": "rtb-0eacbfd1b98ecff84",
            "default_security_group_id": "sg-07e0aa5071e4821d1",
            "dhcp_options_id": "dopt-b56543d2",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0eb67008c273b6b50",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0eacbfd1b98ecff84",
            "owner_id": "482122962623",
            "tags": {
              "Name": "example-stg-vpc"
            },
            "tags_all": {
              "Name": "example-stg-vpc"
            }
          }
        }
      ]
    }
  ]
}